--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Portfolio</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Portfolio</a></li>
                         <!-- <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a></li> -->
                     </ul>
                 </div>
@@ -53,13 +53,31 @@
                 <p class="masthead-subheading font-weight-light mb-0">Loves to learn, solve problems and challenges, be it technical or design related to create a good user experience.</p>
             </div>
         </header>
-        <!-- Portfolio Section-->
-        <section class="page-section portfolio" id="portfolio">
+        <!-- About Section-->
+        <section class="page-section" id="about">
             <div class="container">
-                <!-- Portfolio Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Game Portfolio</h2>
+                <!-- About Section Heading-->
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">About</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- About Section Content-->
+                <div class="row">
+                    <div class="col-lg-4 ml-auto text-secondary mb-0"><p class="lead">Since May 2016 I have been working as a game developer. I worked mainly on mobile (iOS/Android) and PC games using Unity3D and web games using PhaserJS.</p></div>
+                    <div class="col-lg-4 mr-auto text-secondary mb-0"><p class="lead">Aside from game development I have been exploring technologies that are related to web development like ReactJS, NodeJS, Serverless, Docker, MySQL, and some AWS services.</p></div>
+                </div>
+            </div>
+        </section>
+        <!-- Portfolio Section-->
+        <section class="page-section portfolio bg-primary text-white mb-0" id="portfolio">
+            <div class="container">
+                <!-- Portfolio Section Heading-->
+                <h2 class="page-section-heading text-center text-uppercase text-white">Game Portfolio</h2>
+                <!-- Icon Divider-->
+                <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
@@ -86,9 +104,9 @@
                     </div>
                 </div>
                 <!-- Portfolio Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Web Portfolio</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-white">Web Portfolio</h2>
                 <!-- Icon Divider-->
-                <div class="divider-custom">
+                <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
@@ -104,24 +122,6 @@
                             <img class="img-fluid" src="assets/img/portfolio/reactjs-zc-web.jpg" alt="" />
                         </div>
                     </div>
-                </div>
-            </div>
-        </section>
-        <!-- About Section-->
-        <section class="page-section bg-primary text-white mb-0" id="about">
-            <div class="container">
-                <!-- About Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
-                <!-- Icon Divider-->
-                <div class="divider-custom divider-light">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-line"></div>
-                </div>
-                <!-- About Section Content-->
-                <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">Since May 2016 I have been working as a game developer. I worked mainly on mobile (iOS/Android) and PC games using Unity3D and web games using PhaserJS.</p></div>
-                    <div class="col-lg-4 mr-auto"><p class="lead">Aside from game development I have been exploring technologies that are related to web development like ReactJS, NodeJS, Serverless, Docker, MySQL, and some AWS services.</p></div>
                 </div>
             </div>
         </section>
