Added ftf to game portfolio

--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@
                 <div class="row justify-content-center">
                     <!-- Portfolio Item 1-->
                     <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal-sf-ftf-mobile">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio/game.png" alt="" />
+                        </div>
+                    </div>
+                    <!-- Portfolio Item 2-->
+                    <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal-cn-dd-web">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
@@ -93,7 +102,7 @@
                             <img class="img-fluid" src="assets/img/portfolio/cn-dd-web.jpg" alt="" />
                         </div>
                     </div>
-                    <!-- Portfolio Item 2-->
+                    <!-- Portfolio Item 3-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal-ygo-dg-mobile">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -148,6 +157,48 @@
             <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a>
         </div>
         <!-- Portfolio Modals-->
+        <!-- Portfolio Modal sf-ftf-mobile-->
+        <div class="portfolio-modal modal fade" id="portfolioModal-sf-ftf-mobile" tabindex="-1" role="dialog" aria-labelledby="portfolioModal1Label" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
+                <div class="modal-content">
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                    <div class="modal-body text-center">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- Portfolio Modal - Title-->
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">FOOD TRUCK FURY</h2>
+                                    <!-- Icon Divider-->
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+                                    <!-- Portfolio Modal - Image-->
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/game.png" alt="" />
+                                    <!-- Portfolio Modal - Text-->
+                                    <p class="mb-5">
+                                        Mobile(iOS/Android), C#, Unity3D
+                                        <br />
+                                        <br />
+                                        Responsible for some in-game gameplay related computations (Ex. Evenly distributed total maximum offline income cap, gameplay timers, etc.). Created an unity editor tool to automate the avatar importation process to speed up the process and to avoid errors that come along with manual import. Created system in Unity C# which makes some gameObjects and textures to be dynamically loaded and unloaded on runtime as needed to avoid memory pressure. Designed and Implemented UI stack system, revised UI according to the designer’s wireframes, art pass, and player test result, and UI animations using DoTween library in Unity. Implemented a material optimizer script that groups the material within a hierarchy for optimization purposes. Implemented some shader scripts for texture lerp, color lerp, etc. Participated in game design discussions for feasibility checks and task estimates, and technical meetings for code review and suggested some solutions to the current problems. Collaborated with both 2D and 3D art teams for better asset management and optimization.
+                                        <br />
+                                        <br />
+                                        <a class="mb-5" href="https://play.google.com/store/apps/details?id=xyz.blueowl.foodtruckfury&hl=en&gl=US" target="_bank">Playable Link</a>
+                                    </p>
+                                    <button class="btn btn-primary" data-dismiss="modal">
+                                        <i class="fas fa-times fa-fw"></i>
+                                        Close Window
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Portfolio Modal cn-dd-web-->
         <div class="portfolio-modal modal fade" id="portfolioModal-cn-dd-web" tabindex="-1" role="dialog" aria-labelledby="portfolioModal1Label" aria-hidden="true">
             <div class="modal-dialog modal-xl" role="document">
