--- a/index.html
+++ b/index.html
@@ -86,14 +86,25 @@
                 <div class="row justify-content-center">
                     <!-- Portfolio Item 1-->
                     <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal-aac-mobile">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio/animals-and-coins.jpg" alt="" />
+                        </div>
+                    </div>
+                    <!-- Portfolio Item 2-->
+                    <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal-sf-ftf-mobile">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/game.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/FoodTruckFury_04.jpeg" alt="" />
                         </div>
                     </div>
-                    <!-- Portfolio Item 2-->
+                </div>
+                <div class="row justify-content-center">
+                    <!-- Portfolio Item 3-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal-cn-dd-web">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -102,7 +113,7 @@
                             <img class="img-fluid" src="assets/img/portfolio/cn-dd-web.jpg" alt="" />
                         </div>
                     </div>
-                    <!-- Portfolio Item 3-->
+                    <!-- Portfolio Item 4-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal-ygo-dg-mobile">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -157,6 +168,67 @@
             <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a>
         </div>
         <!-- Portfolio Modals-->
+        <!-- Portfolio Modal aac-mobile-->
+        <div class="portfolio-modal modal fade" id="portfolioModal-aac-mobile" tabindex="-1" role="dialog" aria-labelledby="portfolioModal1Label" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
+                <div class="modal-content">
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                    <div class="modal-body text-center">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- Portfolio Modal - Title-->
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">ANIMALS AND COINS</h2>
+                                    <!-- Icon Divider-->
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+                                    <!-- Portfolio Modal - Image-->
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/animals-and-coins.jpg" alt="" />
+                                    <!-- Portfolio Modal - Text-->
+                                    <p class="mb-5">
+                                        Mobile(iOS/Android), C#, Unity3D, Vue.js, Go, Docker, AWS
+                                        <br />
+                                        <br />
+                                        Improve and maintain the project's config tool built in Vue.js 
+                                        <br />
+                                        <br />
+                                        Architects the necessary requirements for a given feature
+                                        <br />
+                                        <br />
+                                        Maintain the quality of the project's codebase by refactoring
+                                        <br />
+                                        <br />
+                                        Perform technical research and development as needed by the task. 
+                                        <br />
+                                        <br />
+                                        Propose new ideas and workflows for the improvement of the assigned project.
+                                        <br />
+                                        <br />
+                                        Create unit and integration tests to maintain the quality of the system. 
+                                        <br />
+                                        <br />
+                                        <a class="mb-5" href="https://apps.apple.com/il/app/animals-coins/id1492722342" target="_bank">Playable Link - iOS</a>
+                                        <br />
+                                        <a class="mb-5" href="https://play.google.com/store/apps/details?id=com.innplaylabs.animalkingdomraid&hl=en&gl=US" target="_bank">Playable Link - Android</a>
+                                        <br />
+                                        <a class="mb-5" href="https://www.youtube.com/watch?v=TRIF_GihmLw" target="_bank">Video Link</a>
+                                    </p>
+                                    <button class="btn btn-primary" data-dismiss="modal">
+                                        <i class="fas fa-times fa-fw"></i>
+                                        Close Window
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Portfolio Modal sf-ftf-mobile-->
         <div class="portfolio-modal modal fade" id="portfolioModal-sf-ftf-mobile" tabindex="-1" role="dialog" aria-labelledby="portfolioModal1Label" aria-hidden="true">
             <div class="modal-dialog modal-xl" role="document">
@@ -177,16 +249,34 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/game.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/FoodTruckFury_04.jpeg" alt="" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">
                                         Mobile(iOS/Android), C#, Unity3D
                                         <br />
                                         <br />
-                                        Responsible for some in-game gameplay related computations (Ex. Evenly distributed total maximum offline income cap, gameplay timers, etc.). Created an unity editor tool to automate the avatar importation process to speed up the process and to avoid errors that come along with manual import. Created system in Unity C# which makes some gameObjects and textures to be dynamically loaded and unloaded on runtime as needed to avoid memory pressure. Designed and Implemented UI stack system, revised UI according to the designer’s wireframes, art pass, and player test result, and UI animations using DoTween library in Unity. Implemented a material optimizer script that groups the material within a hierarchy for optimization purposes. Implemented some shader scripts for texture lerp, color lerp, etc. Participated in game design discussions for feasibility checks and task estimates, and technical meetings for code review and suggested some solutions to the current problems. Collaborated with both 2D and 3D art teams for better asset management and optimization.
+                                        Responsible for some in-game gameplay related computations (Ex. Evenly distributed total maximum offline income cap, gameplay timers, etc.). 
                                         <br />
                                         <br />
-                                        <a class="mb-5" href="https://play.google.com/store/apps/details?id=xyz.blueowl.foodtruckfury&hl=en&gl=US" target="_bank">Playable Link</a>
+                                        Created an unity editor tool to automate the avatar importation process to speed up the process and to avoid errors that come along with manual import. 
+                                        <br />
+                                        <br />
+                                        Created system in Unity C# which makes some gameObjects and textures to be dynamically loaded and unloaded on runtime as needed to avoid memory pressure. 
+                                        <br />
+                                        <br />
+                                        Designed and Implemented UI stack system, revised UI according to the designer’s wireframes, art pass, and player test result, and UI animations using DoTween library in Unity. 
+                                        <br />
+                                        <br />
+                                        Implemented a material optimizer script that groups the material within a hierarchy for optimization purposes. 
+                                        <br />
+                                        <br />
+                                        Implemented some shader scripts for texture lerp, color lerp, etc. Participated in game design discussions for feasibility checks and task estimates, and technical meetings for code review and suggested some solutions to the current problems. 
+                                        <br />
+                                        <br />
+                                        Collaborated with both 2D and 3D art teams for better asset management and optimization.
+                                        <br />
+                                        <br />
+                                        <a class="mb-5" href="https://www.youtube.com/watch?v=XMfXTtGbR-M" target="_bank">Video Link</a>
                                     </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
@@ -228,7 +318,7 @@
                                         Created the game using the PhaserJS in Javascript that supports cross browser.
                                         <br />
                                         <br />
-                                        <a class="mb-5" href="https://www.cartoonnetworkasia.com/games/mighty-magiswords-deadly-darling" target="_bank">Playable Link</a>
+                                        <a class="mb-5" href="https://www.youtube.com/watch?v=dPupwxVA5N4" target="_bank">Video Link</a>
                                     </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
@@ -267,10 +357,18 @@
                                         Mobile(iOS/Android), C++, Cocos2d-x
                                         <br />
                                         <br />
-                                        Collaborated with the server programmer in designing the reconnection feature. Implemented the interpretation of data from the SQL backend for the reconnection feature on the client side of the game using C++. Fixed bugs mainly related to card effects.
+                                        Collaborated with the server programmer in designing the reconnection feature. 
+                                        <br />
+                                        <br />
+                                        Implemented the interpretation of data from the SQL backend for the reconnection feature on the client side of the game using C++. 
+                                        <br />
+                                        <br />
+                                        Fixed bugs mainly related to card effects.
                                         <br />
                                         <br />
                                         <a class="mb-5" href="https://yu-gi-oh-duel-generation.en.uptodown.com/android" target="_bank">Playable Link</a>
+                                        <br />
+                                        <a class="mb-5" href="https://www.youtube.com/watch?v=JGOlGYIp4AE" target="_bank">Video Link</a>
                                     </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
@@ -308,15 +406,34 @@
                                     <p class="mb-5">
                                         Web, Javascript, ReactJS, NodeJS
                                         <br />
+                                        <br />
                                         Serverless, AWS S3, AWS Lambda
+                                        <br />
                                         <br />
                                         Google Maps API, Google Geocoding API, Openweather API
                                         <br />
                                         <br />
-                                        Created the frontend using ReactJS and the backend using Serverless and NodeJS. Generated API keys from Google APIs (Maps, Geocoding) and Openweather API. Added a call to the serverless function from front end to back end using Axios. Used the Google API to get the place information via zip code input. Used the Openweather API to get the 3 day weather forecast. Stored some API keys on the backend for security purposes. Uploaded the front end on AWS S3 bucket and enabled static web hosting. Deployed the backend on AWS Lambda.
+                                        Created the frontend using ReactJS and the backend using Serverless and NodeJS. Generated API keys from Google APIs (Maps, Geocoding) and Openweather API. 
                                         <br />
                                         <br />
-                                        <a class="mb-5" href="http://japan-zipcode-web-app-frontend.s3-website.us-east-2.amazonaws.com/" target="_bank">Project Link</a>
+                                        Added a call to the serverless function from front end to back end using Axios. 
+                                        <br />
+                                        <br />
+                                        Used the Google API to get the place information via zip code input. 
+                                        <br />
+                                        <br />
+                                        Used the Openweather API to get the 3 day weather forecast. 
+                                        <br />
+                                        <br />
+                                        Stored some API keys on the backend for security purposes. 
+                                        <br />
+                                        <br />
+                                        Uploaded the front end on AWS S3 bucket and enabled static web hosting.
+                                        <br />
+                                        <br />
+                                        Deployed the backend on AWS Lambda.
+                                        <br />
+                                        <br />
                                     </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
