--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <!-- Footer Location-->
                     <div class="col-lg-6 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Location</h4>
-                        <p class="lead mb-0">Utsunomiya, Tochigi, Japan</p>
+                        <p class="lead mb-0">Saitama, Saitama, Japan</p>
                     </div>
                     <!-- Footer Social Icons-->
                     <div class="col-lg-6 mb-5 mb-lg-0">
