--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Game Engineer - Web Engineer</p>
+                <p class="masthead-subheading font-weight-light mb-0">Full Stack Game and Web Engineer</p>
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0">Loves to learn, solve problems and challenges, be it technical or design related to create a good user experience.</p>
             </div>
@@ -67,7 +67,7 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ml-auto text-secondary mb-0"><p class="lead">Since May 2016 I have been working as a game developer. I worked mainly on mobile (iOS/Android) and PC games using Unity3D and web games using PhaserJS.</p></div>
-                    <div class="col-lg-4 mr-auto text-secondary mb-0"><p class="lead">Aside from game development I have been exploring technologies that are related to web development like ReactJS, NodeJS, Serverless, Docker, MySQL, and some AWS services.</p></div>
+                    <div class="col-lg-4 mr-auto text-secondary mb-0"><p class="lead">Aside from game development I have experience in web development in Javascript, Typescript, Node.js, Vue.js, Nest.js, Docker, MySQL, and AWS services like Lambda (Serverless).</p></div>
                 </div>
             </div>
         </section>
@@ -84,6 +84,15 @@
                 </div>
                 <!-- Portfolio Grid Items-->
                 <div class="row justify-content-center">
+                    <!-- Portfolio Item 1-->
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal-aac-mobile">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio/animals-and-coins.jpg" alt="" />
+                        </div>
+                    </div>
                     <!-- Portfolio Item 2-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal-sf-ftf-mobile">
@@ -159,6 +168,67 @@
             <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a>
         </div>
         <!-- Portfolio Modals-->
+        <!-- Portfolio Modal aac-mobile-->
+        <div class="portfolio-modal modal fade" id="portfolioModal-aac-mobile" tabindex="-1" role="dialog" aria-labelledby="portfolioModal1Label" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
+                <div class="modal-content">
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                    <div class="modal-body text-center">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- Portfolio Modal - Title-->
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">ANIMALS AND COINS</h2>
+                                    <!-- Icon Divider-->
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+                                    <!-- Portfolio Modal - Image-->
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/animals-and-coins.jpg" alt="" />
+                                    <!-- Portfolio Modal - Text-->
+                                    <p class="mb-5">
+                                        Mobile(iOS/Android), C#, Unity3D, Vue.js, Go, Docker, AWS
+                                        <br />
+                                        <br />
+                                        Improve and maintain the project's config tool built in Vue.js 
+                                        <br />
+                                        <br />
+                                        Architects the necessary requirements for a given feature
+                                        <br />
+                                        <br />
+                                        Maintain the quality of the project's codebase by refactoring
+                                        <br />
+                                        <br />
+                                        Perform technical research and development as needed by the task. 
+                                        <br />
+                                        <br />
+                                        Propose new ideas and workflows for the improvement of the assigned project.
+                                        <br />
+                                        <br />
+                                        Create unit and integration tests to maintain the quality of the system. 
+                                        <br />
+                                        <br />
+                                        <a class="mb-5" href="https://apps.apple.com/il/app/animals-coins/id1492722342" target="_bank">Playable Link - iOS</a>
+                                        <br />
+                                        <a class="mb-5" href="https://play.google.com/store/apps/details?id=com.innplaylabs.animalkingdomraid&hl=en&gl=US" target="_bank">Playable Link - Android</a>
+                                        <br />
+                                        <a class="mb-5" href="https://www.youtube.com/watch?v=TRIF_GihmLw" target="_bank">Video Link</a>
+                                    </p>
+                                    <button class="btn btn-primary" data-dismiss="modal">
+                                        <i class="fas fa-times fa-fw"></i>
+                                        Close Window
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Portfolio Modal sf-ftf-mobile-->
         <div class="portfolio-modal modal fade" id="portfolioModal-sf-ftf-mobile" tabindex="-1" role="dialog" aria-labelledby="portfolioModal1Label" aria-hidden="true">
             <div class="modal-dialog modal-xl" role="document">
